--- a/partners.css
+++ b/partners.css
@@ -1,5 +1,7 @@
-body {
+body, html {
     background-color: var(--primary-background-color);
+    overflow-x:hidden;
+    position: relative;
 
     /*header navbar top*/
     header {
@@ -15,8 +17,6 @@ body {
 @media (max-width: 768px) {
 
     body {
-        /*fixed horizontal scrol*/
-        overflow-x: hidden;
 
 
         /*mobile-menu icon size*/
@@ -44,11 +44,13 @@ body {
 
         /*ul styling*/
         ul.nav-links {
+            left:15px;
             z-index: 3;
             position: absolute;
             width: 100%;
             transform: translateX(100%);
             transition: none;
+            display:hidden;
             visibility: none;
             background-color: var(--primary-background-color);
             margin: 20px 0px;
@@ -92,10 +94,13 @@ body {
             transition: transform .8s ease-in-out;
             /* Enable transition only on user interaction */
             visibility: visible;
+            display:block;
             opacity: 1;
         }
 
         .partners-section {
+            position:relative;
+            overflow-x:hidden;
 
             h1 {
                 color: var(--primary-background-color);
@@ -149,15 +154,21 @@ body {
         .slideshow-container {
             position: relative;
             border-radius: 8px;
+            min-height: 375px;
         }
 
         .slide {
             display: none;
+            padding: 25px;
             width: 100%;
             height: 100%;
             background-color: var(--primary-highlight-color);
             text-align: center;
             font-size: 24px;
+
+            p {
+                text-align: left;
+            }
         }
 
         .slide.active {
@@ -169,16 +180,19 @@ body {
             top: 50%;
             right: -10px;
             transform: translateY(-50%);
-            background-color: #007bff;
-            color: white;
+            background-color: var(--secondary-highlight-color);
+            color: var(--primary-background-color);
             border: none;
             padding: 8px;
+            font-size: 13px;
             border-radius: var(--rounded);
             cursor: pointer;
         }
 
         .arrow:hover {
-            background-color: #0056b3;
+            background-color: var(--button-active);
+            border-style: dashed;
+            transition: 0.3s;
         }
 
         .dots-container {
