--- a/partners.css
+++ b/partners.css
@@ -1,6 +1,7 @@
-body, html {
+body,
+html {
     background-color: var(--primary-background-color);
-    overflow-x:hidden;
+    overflow-x: hidden;
     position: relative;
 
     /*header navbar top*/
@@ -44,13 +45,13 @@ body, html {
 
         /*ul styling*/
         ul.nav-links {
-            left:15px;
+            left: 15px;
             z-index: 3;
             position: absolute;
             width: 100%;
             transform: translateX(100%);
             transition: none;
-            display:hidden;
+            display: hidden;
             visibility: none;
             background-color: var(--primary-background-color);
             margin: 20px 0px;
@@ -94,13 +95,13 @@ body, html {
             transition: transform .8s ease-in-out;
             /* Enable transition only on user interaction */
             visibility: visible;
-            display:block;
+            display: block;
             opacity: 1;
         }
 
         .partners-section {
-            position:relative;
-            overflow-x:hidden;
+            position: relative;
+            overflow-x: hidden;
 
             h1 {
                 color: var(--primary-background-color);
@@ -159,7 +160,7 @@ body, html {
 
         .slide {
             display: none;
-            padding: 25px;
+            padding: 20px;
             width: 100%;
             height: 100%;
             background-color: var(--primary-highlight-color);
@@ -168,6 +169,10 @@ body, html {
 
             p {
                 text-align: left;
+            }
+
+            a {
+               /*ADD STYLLING*/
             }
         }
 
@@ -195,7 +200,7 @@ body, html {
             transition: 0.3s;
         }
 
-        .dots-container {
+        .dots-btn-container {
             margin-top: 10px;
             display: flex;
             gap: 10px;
